# ZORSBOT

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  logger.py  logs.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  support-question.md  ⭐-feature-request.md  🚀-enhancement.md
.github/scripts/: generate_report.py  generate_summary.py
.github/workflows/: build-image.yml  code-check.yml  version-bump.yml
alembic/: env.py
classes/: logger.py
cogs/: events.py  fun.py  habitue.py  listeners.py  startup.py  user.py
cogs/videogames/: gaming.py
config/: config.yaml  config.yaml.template  settings.py
model/: database.py  managers.py  schemas.py
prisma/: schema.prisma
utilities/: logger.py  utils.py
utils/: color.py  database.py  logger.py  positioning.py  settings.py  singletonmeta.py  utilities.py  zors_cog.py
