[project]
name = "zorsbot"
version = "0.1"
description = "A discord bot for 'la bande s4' server"
authors = [{ name = "ZEN" }, { name = "Anemys" }]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "audioop-lts>=0.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "py-cord>=2.6.1",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.4",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[tool.mypy]
plugins = ['pydantic.mypy']
