[project]
name = "zorsbot"
version = "1.0.4"
description = "A discord bot for 'la bande s4' server"
authors = [{ name = "ZEN" }, { name = "Anemys" }]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg==0.31.0",
    "audioop-lts>=0.2.1",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "py-cord==2.7.0",
    "pydantic==2.12.5",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlmodel==0.0.31",
]

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "ruff>=0.14.11",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.bumpversion]
current_version = "1.0.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}" # Maybe use later [skip ci] to avoid ci
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**',
]
